--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,17 +19,15 @@ dependencies:
   # Localization
   easy_localization: ^3.0.8
 
+  # Local Storage
+  shared_preferences: ^2.5.3
+
   # Networking
   dio: ^5.9.0
   device_info_plus: ^12.1.0
   android_id: ^0.4.0
-  flutter_secure_storage: ^9.2.4
   uuid: ^4.5.1
   package_info_plus: ^9.0.0
-
-  # Local Storage
-  hive_ce: ^2.13.2
-  hive_ce_flutter: ^2.3.2
 
   # Routing
   go_router: ^17.0.0
@@ -37,6 +35,8 @@ dependencies:
   # Models
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
+  equatable: ^2.0.7
+  dartz: ^0.10.1
 
   # Environment
   envied: ^1.3.0
@@ -50,19 +50,22 @@ dependencies:
   flutter_svg: ^2.2.1
   cached_network_image: ^3.4.1
   carousel_slider: ^5.1.1
+  font_awesome_flutter: ^10.10.0
   lottie: ^3.3.2
   shimmer: ^3.0.0
+  flutter_inappwebview: ^6.1.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  hive_ce_generator: ^1.9.2
-  json_serializable: ^6.9.5
-  build_runner: ^2.5.4
+  json_serializable: ^6.11.1
+  build_runner: ^2.7.1
   flutter_gen_runner: ^5.11.0
-  freezed: ^3.1.0
+  freezed: ^3.2.3
   envied_generator: ^1.1.1
+  bloc_test: ^10.0.0
+  mocktail: ^1.0.4
 
 flutter_gen:
   output: lib/core/gen/
