--- a/.gitignore
+++ b/.gitignore
@@ -134,6 +134,9 @@ lib/generated_plugin_registrant.dart
 **/ios/Flutter/flutter_export_environment.sh
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
+**/ios/**/*.xcworkspace/xcuserdata/
+**/ios/**/*.xcworkspace/contents.xcworkspacedata
+**/ios/**/*.xcodeproj/project.pbxproj
 
 # Exceptions to above rules.
 !**/ios/**/default.mode1v3
